REGRESSION(r106668-r106889): Chromium page cycler tests (Intl2) performance regressions. <http://webkit.org/b/78068>

Reviewed by Ryosuke Niwa.

Create CSS_IDENT values for attribute styles in the document's CSSValuePool.
This regressed in r106756 and I suspect it'll fix up the cycler regression.

* dom/StyledElement.cpp:
(WebCore::StyledElement::addCSSProperty):


Canonical link: https://commits.webkit.org/94941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107029 268f45cc-cd09-0410-ab3c-d52691b4dbfc